# Scraper_rust

./: .gitignore  Cargo.toml  README.md
output/: courses.json
src/: extractor.rs  fetcher.rs  main.rs  schema.rs  sitemap.rs
