[package]
name = "coventry_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coventry_scraper"
path = "src/main.rs"

# Run with JS rendering:  cargo run --release --features js_render
# Run without (default):  cargo run --release
[features]
default = []
js_render = ["chromiumoxide"]

[dependencies]
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["json", "gzip", "deflate"] }
scraper            = "0.20"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
quick-xml          = { version = "0.36", features = ["serialize"] }   # sitemap XML parsing
chromiumoxide      = { version = "0.7",  features = ["tokio-runtime"], optional = true }
futures            = "0.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
anyhow             = "1"
regex              = "1"   # robust score extraction